syntax = "proto3";
package protocol;

message ReqHeader {
    int64  uid   = 1;
    string token = 2;
}

message AckHeader {
    int32  code = 1;
    string msg  = 2;
}

message NotiHeader {
    // int64 uid = 1;
}

message CallAckHeader {
    int32  code = 1;
    string msg  = 2;
}
